--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.prod.config.js",
-    "dev": "webpack serve --config webpack.dev.config.js"
+    "build": "webpack serve --config webpack.prod.config.js",
+    "dev": "webpack --config webpack.dev.config.js"
   },
   "repository": {
     "type": "git",
